--- a/lib/hierbautberlin_web/live/map_live.html.leex
+++ b/lib/hierbautberlin_web/live/map_live.html.leex
@@ -1,5 +1,5 @@
 <div id="mapContainer" class="map--container" phx-hook="InteractiveMap" >
-  <div id='map' class="map--container--tiles" phx-update="ignore" data-position-lat="<%= @mapPosition[:lat]%>" data-position-lng="<%= @mapPosition[:lng]%>">
+  <div id='map' class="map--container--tiles" phx-update="ignore" data-position-lat="<%= @mapPosition[:lat]%>" data-position-lng="<%= @mapPosition[:lng]%>" data-position-zoom="<%= @mapZoom %>">
   </div>
   <script type="application/json" id="map-data">
   <%= raw geo_item_to_json(@mapItems) %>
