--- a/assets/css/app.scss
+++ b/assets/css/app.scss
@@ -2,6 +2,7 @@
 @import './header';
 @import './map';
 @import './fonts/inter';
+@import './details';
 
 /* LiveView specific classes for your customizations */
 .phx-no-feedback.invalid-feedback,
