--- a/assets/css/app.scss
+++ b/assets/css/app.scss
@@ -15,6 +15,20 @@ body {
   font-family: "Inter", "Helvetica Neue", "Helvetica", "Arial", sans-serif;
 }
 
+.container {
+  margin-top: 4rem;
+  margin-bottom: 4rem;
+}
+
+.live-header {
+  position: absolute;
+  top: 0;
+  width: 100%;
+  height: 2.8em;
+  box-shadow: 0px 31px 30px rgba(0, 0, 0, 0.07), 0px 21.3066px 33.4221px rgba(0, 0, 0, 0.0503198), 0px 11.3915px 17.869px rgba(0, 0, 0, 0.0417275), 0px 6.38599px 10.0172px rgba(0, 0, 0, 0.035), 0px 3.39155px 5.32008px rgba(0, 0, 0, 0.0282725), 0px 1.4113px 2.21381px rgba(0, 0, 0, 0.0196802);
+  z-index: 1;
+}
+
 .phx-click-loading {
   opacity: 0.5;
   transition: opacity 1s ease-out;
