--- a/assets/css/header.scss
+++ b/assets/css/header.scss
@@ -1,8 +1,10 @@
 header {
-  box-shadow: 0px 31px 30px rgba(0, 0, 0, 0.07), 0px 21.3066px 33.4221px rgba(0, 0, 0, 0.0503198), 0px 11.3915px 17.869px rgba(0, 0, 0, 0.0417275), 0px 6.38599px 10.0172px rgba(0, 0, 0, 0.035), 0px 3.39155px 5.32008px rgba(0, 0, 0, 0.0282725), 0px 1.4113px 2.21381px rgba(0, 0, 0, 0.0196802);
   background-color:  white;
   z-index: 100;
   position: relative;
+  display: flex;
+  justify-content: space-between;
+  flex-direction: row;
 
   nav {
     ul {
@@ -11,11 +13,24 @@ header {
       list-style: none;
       justify-content: flex-end;
       margin-right: 3rem;
+      margin-bottom: 0;
 
       li {
-        padding: 1rem 0 0rem 2rem;
+        padding: 1rem 0 0rem 3rem;
       }
     }
   }
+}
+
+.header--logo {
+  display: flex;
+  align-items: center;
+  color: black;
+}
+
+.header--logo--image {
+  margin: 0 0.7rem 0 2rem;
+  width: 32px;
+  height: 32px;
 }
 
