--- a/lib/hierbautberlin_web/live/map_live.html.leex
+++ b/lib/hierbautberlin_web/live/map_live.html.leex
@@ -32,63 +32,8 @@
 </ul>
 
 <%= if @detailItem != nil do %>
-  <div class="details" phx-capture-click='hideDetails'>
-    <div class="details--box">
-      <a id="close-details" class="details--close" href="/map" phx-click="hideDetails" phx-hook="PreventDefaultOnClick">
-        <%= PhoenixInlineSvg.Helpers.svg_image(HierbautberlinWeb.Endpoint, "close") %>
-      </a>
-
-      <div class="details--content">
-        <h3 class="details--content--title"><%= @detailItem.title %></h3>
-
-        <%= if !is_blank?(@detailItem.subtitle) do %>
-          <h4><%= @detailItem.subtitle %></h4>
-        <% end %>
-
-        <div class="details--labels">
-          <%= if @detailItem.participation_open do %>
-            <span class="label--participation">Beteiligung möglich</span>
-          <% end %>
-          <%= if @detailItem.state do %>
-            <span class="label--state"><%= state_to_text(@detailItem) %></span>
-          <% end %>
-          <span class="label--source"><%= @detailItem.source.name %></span>
-        </div>
-
-        <%= if !is_blank?(@detailItem.description) do %>
-          <p><%= @detailItem.description%></p>
-        <% end %>
-
-        <%= if !is_blank?(@detailItem.url)  do %>
-          <div class="details--links">
-            <div><a href="<%= @detailItem.url %>" target="_blank" rel="noopener noreferrer">&gt; Details</a></div>
-            <%= if !is_blank?(@detailItem.additional_link_name) do %>
-              <div><a href="<%= @detailItem.additional_link %>" target="_blank" rel="noopener noreferrer">&gt; <%= @detailItem.additional_link_name %></a></div>
-            <% end %>
-          </div>
-        <% end %>
-
-        <%= if @detailItem.date_start || @detailItem.date_end do %>
-          <p>
-            Datum:
-            <%= if @detailItem.date_start do %>
-              <%= Timex.format!(@detailItem.date_start, "{D}.{M}.{YYYY}") %>
-            <% end %>
-            <%= if @detailItem.date_end && @detailItem.date_start != @detailItem.date_end do %>
-              - <%= Timex.format!(@detailItem.date_end, "{D}.{M}.{YYYY}") %>
-            <% end %>
-          </p>
-        <% end %>
-
-        <%= if !is_blank?(@detailItem.source.copyright) do %>
-        <div>&copy;
-          <a href="<%= @detailItem.source.url %>" target="_blank" rel="noopener noreferrer">
-            <%= @detailItem.source.copyright %>
-          </a>
-        </div>
-        <% end %>
-      </div>
-    </div>
-
-  </div>
+  <%= live_modal @socket, HierbautberlinWeb.Components.DetailsModal,
+    id: @detailItem.id,
+    detailItem: @detailItem,
+    return_to: route_to_map(@socket, @mapPosition, @mapZoom, nil) %>
 <% end %>
