--- a/assets/css/pages/map.scss
+++ b/assets/css/pages/map.scss
@@ -13,18 +13,36 @@
   height: 100%;
 }
 
-.map--item-list {
+.map--item-list-wrapper {
   z-index: 101;
   position: absolute;
   top: 6rem;
   right: 2rem;
   height: calc(100vh - 10rem);
-  overflow: auto;
   width: 40rem;
   background-color: white;
-  padding: 2rem;
   border-radius: 4px;
+
+  display: flex;
+  flex-direction: column;
+}
+
+.map--item-list {
+  height: 100%;
+  overflow: auto;
   list-style: none;
+  margin-bottom: 0;
+  padding: 2rem 2rem 0 2rem;
+}
+
+.map--item-list-footer {
+  text-align: center;
+  font-size: 0.8em;
+  padding: 0.5em 0;
+  color: var(--light-text-color);
+  a {
+    color: var(--light-text-color);
+  }
 }
 
 .map--item-list--item {
@@ -72,12 +90,17 @@
 }
 
 @media only screen and (max-width: 50em) {
-  .map--item-list {
+  .map--item-list-wrapper {
     position: absolute;
     left: 2rem;
     top: 45vh;
     bottom: 1em;
     width: auto;
     height: auto;
+  }
+
+  .map--item-list {
+    height: auto;
+    overflow: scroll;
   }
 }
