--- a/lib/hierbautberlin_web/templates/layout/app.html.eex
+++ b/lib/hierbautberlin_web/templates/layout/app.html.eex
@@ -3,3 +3,4 @@
   <p class="alert alert-danger" role="alert"><%= get_flash(@conn, :error) %></p>
   <%= @inner_content %>
 </main>
+<%= render "_footer.html", assigns %>
