[#143] Add welcome page
closes #143

--- a/assets/css/colors.scss
+++ b/assets/css/colors.scss
@@ -3,6 +3,8 @@
   --text-color: black;
   --light-text-color: #949494;
 
+  --border-color: #5f5f5f;
+
   --deactive: #c4c4c4;
 
   --success: #00BB00;
