--- a/assets/css/app.scss
+++ b/assets/css/app.scss
@@ -14,6 +14,7 @@
 body {
   margin: 0;
   font-family: "Inter", "Helvetica Neue", "Helvetica", "Arial", sans-serif;
+  color: var(--text-color)
 }
 
 .container {
