[#143] Add welcome page (#148)
closes #143

--- a/lib/hierbautberlin_web/templates/impressum/index.html.eex
+++ b/lib/hierbautberlin_web/templates/impressum/index.html.eex
@@ -7,9 +7,9 @@
 </p>
 
 <p>
-  <a href="tel:+49 30 41728894">+49 30 41728894</a>
+  <a href="tel:+493041728894">+49 30 41728894</a>
 </p>
 
 <p>
-  <a href="mail:mail@hierbautberlin.de">mail@hierbautberlin.de</a>
+  <a href="mailto:mail@hierbautberlin.de">mail@hierbautberlin.de</a>
 </p>
