--- a/assets/css/components/index.scss
+++ b/assets/css/components/index.scss
@@ -1,5 +1,8 @@
+@import './button.scss';
 @import './details.scss';
+@import './footer.scss';
 @import './header.scss';
 @import './label.scss';
+@import './map_details.scss';
 @import './modal.scss';
-@import './footer.scss';
+@import './toggle.scss';
