--- a/assets/css/pages/map.scss
+++ b/assets/css/pages/map.scss
@@ -8,6 +8,33 @@
   background-color: #E6E4E0;
 }
 
+.map--location-button {
+  position: absolute;
+  top: 2rem;
+  left: 2rem;
+  padding: 0.3rem;
+  margin: 0;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: auto;
+  line-height: normal;
+
+  background-color: var(--bg-color);
+  border-color: var(--deactive);
+
+  &:hover,
+  &:focus {
+    background-color: var(--bg-color) !important;
+    border-color: var(--text-color) !important;
+  }
+
+  svg {
+    width: 2.3rem;
+    height: 2.3rem;
+  }
+}
+
 .map--container--tiles {
   width: 100%;
   height: 100%;
