--- a/lib/hierbautberlin_web/live/map_live.html.leex
+++ b/lib/hierbautberlin_web/live/map_live.html.leex
@@ -1,6 +1,9 @@
 <div id="mapContainer" class="map--container" phx-hook="InteractiveMap" >
   <div id='map' class="map--container--tiles" phx-update="ignore" data-position-lat="<%= @map_position[:lat]%>" data-position-lng="<%= @map_position[:lng]%>" data-position-zoom="<%= @map_zoom %>">
   </div>
+  <button id="map-location-button" class="map--location-button" phx-update="ignore">
+    <%= PhoenixInlineSvg.Helpers.svg_image(HierbautberlinWeb.Endpoint, "current-location", alt: "Aktuelle Position finden") %>
+  </button>
   <script type="application/json" id="map-data">
   <%= raw geo_item_to_json(@map_items) %>
   </script>
