--- a/lib/hierbautberlin_web/live/components/details_modal.html.leex
+++ b/lib/hierbautberlin_web/live/components/details_modal.html.leex
@@ -15,7 +15,7 @@
 </div>
 
 <%= if !is_blank?(@detailItem.description) do %>
-  <p><%= @detailItem.description%></p>
+  <%= text_to_html @detailItem.description%>
 <% end %>
 
 <%= if !is_blank?(@detailItem.url)  do %>
