--- a/lib/hierbautberlin_web/templates/layout/root.html.leex
+++ b/lib/hierbautberlin_web/templates/layout/root.html.leex
@@ -8,7 +8,7 @@
     <%= live_title_tag assigns[:page_title] || "Hier Baut Berlin", prefix: if assigns[:page_title] != nil, do: "Hier Baut Berlin - ", else: "" %>
     <link phx-track-static rel="stylesheet" href="<%= Routes.static_path(@conn, "/css/app.css") %>"/>
     <link href='https://api.mapbox.com/mapbox-gl-js/v2.2.0/mapbox-gl.css' rel='stylesheet' />
-    <script defer phx-track-static type="text/javascript" src="<%= Routes.static_path(@conn, "/js/app.js") %>"></script>
+    <script defer phx-track-static type="text/javascript" src="<%= Routes.static_path(@conn, "/js/app.bundle.js") %>"></script>
     <%= ogtags(@conn) %>
     <%= if Application.get_env(:hierbautberlin, :environment) == :prod do %>
       <script src="//d2wy8f7a9ursnm.cloudfront.net/v7/bugsnag.min.js"></script>
